--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
     </form>
   </div>
   <div class="right">
-    <img src="assets/1690229717-162752723964bedbd546018!Stay-Ahead-in-the-Coding-World-with-These-Programming-Laptop-2.jpg" alt="Login Visual" />
+    <img src="assets/1690229717-162752723964bedbd546018!Stay-Ahead-in-the-Coding-World-with-These-Programming-Laptop-2.jpg" alt="Banner" />
   </div>
+  <p>Forget Password</p>
 </div>
 </body>
 </html>
