--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
   </div>
   <div class="right">
     <img src="assets/1690229717-162752723964bedbd546018!Stay-Ahead-in-the-Coding-World-with-These-Programming-Laptop-2.jpg" alt="Banner" />
-  </div>
-  <p>Forget Password</p>
+  <p>Forget Password</p></div>
 </div>
 </body>
 </html>
