--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
       </div>
       <div class="password">
     <i class="fa-solid fa-lock"></i>
-    <input type="password" placeholder="Password" required/>
-      <button type="submit">Login</button>
-      </div>
+    <input type="password" placeholder="Password" required/></div>
+      <button type="submit">Sign In</button>
+      <p><i class="fa fa-key"></i> Forget Password</p>
     </form>
   </div>
   <div class="right">
     <img src="assets/1690229717-162752723964bedbd546018!Stay-Ahead-in-the-Coding-World-with-These-Programming-Laptop-2.jpg" alt="Banner" />
-  <p>Forget Password</p></div>
+  </div>
 </div>
 </body>
 </html>
