--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
       <p>User Login</p>
       <div class="username">
     <i class="fa-solid fa-envelope"></i>
-      <input type="text" placeholder="Username" required/>
+      <input type ="email" id ="email"placeholder="Enter your Email" required/>
       </div>
       <div class="password">
     <i class="fa-solid fa-lock"></i>
-    <input type="password" placeholder="Password" required/></div>
-      <button type="submit">Sign In</button>
+    <input type ="password" id ="password" placeholder="Password" required/></div>
+      <button type ="button">Sign In</button>
       <p><i class="fa fa-key"></i> Forget Password</p>
     </form>
   </div>
@@ -28,5 +28,6 @@
     <img src="assets/1690229717-162752723964bedbd546018!Stay-Ahead-in-the-Coding-World-with-These-Programming-Laptop-2.jpg" alt="Banner" />
   </div>
 </div>
+<script src="login.js"></script>
 </body>
 </html>
